# calculate

./: .gitignore  Cargo.toml  build.rs  ln_const_gen.py  rustc-ice-2024-04-28T11_26_43-29918.txt
.github/workflows/: pages.yaml
calculate/: Cargo.toml
calculate/src/: main.rs
calculate_inf/: Cargo.toml
calculate_inf/src/: lib.rs
ignore___calculate_inf/: Cargo.toml
ignore___calculate_inf/src/: lib.rs
pages/: Cargo.toml  Makefile  index.html  script.js  script.mjs  style.css
pages/src/: lib.rs
src/: error.rs  latex.rs  lib.rs  main.rs  rational.rs  traits.rs
src/rational/: complex.rs  ln_const.rs  mod.rs
