[workspace]
members = [ "calculate","pages"]

[package]
name = "smolcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = { version = "0.4.5", optional = true }
num-integer = { version = "0.1.46", default-features = false, optional = true }
num-rational = { version = "0.4.1", optional = true, default-features = false }
num-traits = { version = "0.2.18", optional = true }

[features]
default = ["any_num", "std"]
any_num = ["dep:num-traits"]
num_complex = ["dep:num-complex"]
std = []
num_rational = ["dep:num-rational", "dep:num-integer"]
