[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
calculate = { path = "../", features = ["num_complex", "num_rational"] }
float-pretty-print = "0.1.1"
num-bigint = "0.4.4"
num-complex = "0.4.5"
num-rational = "0.4.1"
num-traits = "0.2.18"
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]
